objects/Event_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <referenceTo>Criteria__c</referenceTo>
        <relationshipLabel>Event Criterias</relationshipLabel>
        <relationshipName>Event_Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>criteria_user_id__c</fullName>
        <description>defines who created this criteria, options will be event admin or buyer or seller their respective user ids will be stored. need to change this to</description>
        <label>criteria user id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>criteria_user_type__c</fullName>
        <description>type of the user who creating criteria , event_admin, buyer or seller</description>
        <label>criteria_user_type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>event_id__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Event Criterias</relationshipLabel>
        <relationshipName>Event_Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Event Criteria</label>
    <nameField>
        <label>event criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>